--- a/src/assect/css/mycss.css
+++ b/src/assect/css/mycss.css
@@ -6,4 +6,19 @@
 .error{      
     max-height: 50%;
     max-width: 75%;
+    padding-left: 3%;
 }
+
+.sidenav {
+    height: auto; /* 100% Full-height */
+    width: 10; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    background-color: lightpink; /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+  }
+  
