--- a/src/assect/css/mycss.css
+++ b/src/assect/css/mycss.css
@@ -8,7 +8,7 @@
     padding-left: 14%;
     background-color: aqua;   
     max-height: 100%;
-    max-width: 80%;
+    width: 70%;
     /* padding-left: 3%; */
     /* /* align-self: center; */
     align-items: center;
